...
                <rect key="frame" x="0.0" y="0.0" width="399" height="708"/>
                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                <subviews>
                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="v9G-ww-Wgv">
                        <rect key="frame" x="0.0" y="0.0" width="399" height="708"/>
                        <color key="backgroundColor" red="0.12549019610000001" green="0.14117647059999999" blue="0.1450980392" alpha="1" colorSpace="calibratedRGB"/>
                        <accessibility key="accessibilityConfiguration" identifier="gallery_image"/>
                    </imageView>
                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kJX-0B-eA5">
                        <rect key="frame" x="0.0" y="0.0" width="399" height="708"/>
                        <accessibility key="accessibilityConfiguration" identifier="btn_image_tap"/>
                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                        <state key="normal" title=" "/>
                        <connections>
                            <action selector="btnOverviewTapped:" destination="gTV-IL-0wX" eventType="touchUpInside" id="FqU-tf-lMS"/>
                            <action selector="tapOnImage:" destination="gTV-IL-0wX" eventType="touchUpInside" id="2xj-1w-YYr"/>
                        </connections>
                    </button>
                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v3p-x4-sGj">
                        <rect key="frame" x="30" y="588" width="339" height="35.5"/>
                        <accessibility key="accessibilityConfiguration" identifier="lbl_title"/>
                        <fontDescription key="fontDescription" name="ChalkboardSE-Bold" family="Chalkboard SE" pointSize="25"/>
                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <nil key="highlightedColor"/>
                    </label>
                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oh9-s5-2RA">
                        <rect key="frame" x="30" y="627.5" width="339" height="20.5"/>
                        <accessibility key="accessibilityConfiguration" identifier="lbl_date"/>
                        <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="18"/>
                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <nil key="highlightedColor"/>
                    </label>
                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zNw-qe-4mF">
                        <rect key="frame" x="0.0" y="648" width="399" height="60"/>
...
                            <constraint firstItem="Hzb-kM-s0b" firstAttribute="width" secondItem="zNw-qe-4mF" secondAttribute="width" id="k8J-xb-L4l"/>
                            <constraint firstItem="twt-fT-8ez" firstAttribute="top" secondItem="zNw-qe-4mF" secondAttribute="top" id="r1u-dg-acK"/>
                        </constraints>
                    </view>
                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hWP-1f-U6F">
                        <rect key="frame" x="0.0" y="588" width="399" height="120"/>
                        <accessibility key="accessibilityConfiguration" identifier="btn_expand"/>
                        <constraints>
                            <constraint firstAttribute="height" constant="120" id="rBK-bE-WpS"/>
                        </constraints>
                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                        <state key="normal" title=" "/>
                        <connections>
...
