...
        return controller
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        self.title = "Gallery Home"
        self.setupCollectionView()
        self.setListener()
    }
    
    func setupCollectionView() {
        self.collectionView.accessibilityIdentifier = "home_collectionView"
        
        self.collectionView.dataSource = self
        self.collectionView.delegate = self
        
        self.collectionView.register(UINib(nibName: "GalleryCollectionViewCell", bundle: nil), forCellWithReuseIdentifier: "gallery_cell")
    }
...
