...
                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                    </collectionViewFlowLayout>
                </collectionView>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="afT-o4-jV9">
                    <rect key="frame" x="20" y="64" width="40" height="40"/>
                    <accessibility key="accessibilityConfiguration" identifier="btn_back"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="40" id="UFX-Yg-Je1"/>
                        <constraint firstAttribute="height" constant="40" id="qKR-VJ-gUm"/>
                    </constraints>
                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                    <state key="normal" title="Button"/>
...
