...
        self.backButton.backgroundColor = .white
        self.backButton.layer.cornerRadius = 20
        self.backButton.layer.masksToBounds = true
    }
    
    func setupCollectionView() {
        self.collectionView.accessibilityIdentifier = "gallery_details_collectionView"
        
        self.collectionView.dataSource = self
        self.collectionView.delegate = self
        self.collectionView.prefetchDataSource = self
        
        self.collectionView.register(UINib(nibName: "SwipeCollectionViewCell", bundle: nil), forCellWithReuseIdentifier: "swipe_cell")
...
